@@ -11,35 +11,35 @@ import scala.language.reflectiveCalls
 class MarkerLoggingTest extends FunSuite with Matchers with MockitoSugar {
 
   test("Marker Logging#trace enabled") {
-    val f = fixture(_.isTraceEnabled, isEnabled = true)
+    val f = fixture(_.isTraceEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.trace(f.marker, f.message)
     verify(f.underlying).trace(f.marker, f.message)
   }
 
   test("Marker Logging#trace not enabled") {
-    val f = fixture(_.isTraceEnabled, isEnabled = false)
+    val f = fixture(_.isTraceEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.trace(f.marker, f.message)
     verify(f.underlying, never).trace(anyObject[Marker], anyString)
   }
 
   test("Marker Logging#trace enabled with message and cause") {
-    val f = fixture(_.isTraceEnabled, isEnabled = true)
+    val f = fixture(_.isTraceEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.trace(f.marker, f.message, f.cause)
     verify(f.underlying).trace(f.marker, f.message, f.cause)
   }
 
   test("Marker Logging#trace not enabled with message and cause") {
-    val f = fixture(_.isTraceEnabled, isEnabled = false)
+    val f = fixture(_.isTraceEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.trace(f.marker, f.message, f.cause)
     verify(f.underlying, never).trace(anyObject[Marker], anyString, anyObject)
   }
 
   test("Marker Logging#trace enabled with parameters") {
-    val f = fixture(_.isTraceEnabled, isEnabled = true)
+    val f = fixture(_.isTraceEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.traceWith(f.marker, f.message, f.arg1)
     verify(f.underlying).trace(f.marker, f.message, Seq(f.arg1): _*)
@@ -50,7 +50,7 @@ class MarkerLoggingTest extends FunSuite with Matchers with MockitoSugar {
   }
 
   test("Marker Logging#trace not enabled with parameters") {
-    val f = fixture(_.isTraceEnabled, isEnabled = false)
+    val f = fixture(_.isTraceEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.traceWith(f.marker, f.message, f.arg1)
     verify(f.underlying, never).trace(f.marker, f.message, Seq(f.arg1): _*)
@@ -63,35 +63,35 @@ class MarkerLoggingTest extends FunSuite with Matchers with MockitoSugar {
   /* Debug */
 
   test("Marker Logging#debug enabled") {
-    val f = fixture(_.isDebugEnabled, isEnabled = true)
+    val f = fixture(_.isDebugEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.debug(f.marker, f.message)
     verify(f.underlying).debug(f.marker, f.message)
   }
 
   test("Marker Logging#debug not enabled") {
-    val f = fixture(_.isDebugEnabled, isEnabled = false)
+    val f = fixture(_.isDebugEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.debug(f.marker, f.message)
     verify(f.underlying, never).debug(anyObject[Marker], anyString)
   }
 
   test("Marker Logging#debug enabled with message and cause") {
-    val f = fixture(_.isDebugEnabled, isEnabled = true)
+    val f = fixture(_.isDebugEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.debug(f.marker, f.message, f.cause)
     verify(f.underlying).debug(f.marker, f.message, f.cause)
   }
 
   test("Marker Logging#debug not enabled with message and cause") {
-    val f = fixture(_.isDebugEnabled, isEnabled = false)
+    val f = fixture(_.isDebugEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.debug(f.marker, f.message, f.cause)
     verify(f.underlying, never).debug(anyObject[Marker], anyString, anyObject)
   }
 
   test("Marker Logging#debug enabled with parameters") {
-    val f = fixture(_.isDebugEnabled, isEnabled = true)
+    val f = fixture(_.isDebugEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.debugWith(f.marker, f.message, f.arg1)
     verify(f.underlying).debug(f.marker, f.message, Seq(f.arg1): _*)
@@ -102,7 +102,7 @@ class MarkerLoggingTest extends FunSuite with Matchers with MockitoSugar {
   }
 
   test("Marker Logging#debug not enabled with parameters") {
-    val f = fixture(_.isDebugEnabled, isEnabled = false)
+    val f = fixture(_.isDebugEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.debugWith(f.marker, f.message, f.arg1)
     verify(f.underlying, never).debug(f.marker, f.message, Seq(f.arg1): _*)
@@ -115,35 +115,35 @@ class MarkerLoggingTest extends FunSuite with Matchers with MockitoSugar {
   /* Info */
 
   test("Marker Logging#info enabled") {
-    val f = fixture(_.isInfoEnabled, isEnabled = true)
+    val f = fixture(_.isInfoEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.info(f.marker, f.message)
     verify(f.underlying).info(f.marker, f.message)
   }
 
   test("Marker Logging#info not enabled") {
-    val f = fixture(_.isInfoEnabled, isEnabled = false)
+    val f = fixture(_.isInfoEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.info(f.marker, f.message)
     verify(f.underlying, never).info(anyObject[Marker], anyString)
   }
 
   test("Marker Logging#info enabled with message and cause") {
-    val f = fixture(_.isInfoEnabled, isEnabled = true)
+    val f = fixture(_.isInfoEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.info(f.marker, f.message, f.cause)
     verify(f.underlying).info(f.marker, f.message, f.cause)
   }
 
   test("Marker Logging#info not enabled with message and cause") {
-    val f = fixture(_.isInfoEnabled, isEnabled = false)
+    val f = fixture(_.isInfoEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.info(f.marker, f.message, f.cause)
     verify(f.underlying, never).info(anyObject[Marker], anyString, anyObject)
   }
 
   test("Marker Logging#info enabled with parameters") {
-    val f = fixture(_.isInfoEnabled, isEnabled = true)
+    val f = fixture(_.isInfoEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.infoWith(f.marker, f.message, f.arg1)
     verify(f.underlying).info(f.marker, f.message, Seq(f.arg1): _*)
@@ -154,7 +154,7 @@ class MarkerLoggingTest extends FunSuite with Matchers with MockitoSugar {
   }
 
   test("Marker Logging#info not enabled with parameters") {
-    val f = fixture(_.isInfoEnabled, isEnabled = false)
+    val f = fixture(_.isInfoEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.infoWith(f.marker, f.message, f.arg1)
     verify(f.underlying, never).info(f.marker, f.message, Seq(f.arg1): _*)
@@ -167,35 +167,35 @@ class MarkerLoggingTest extends FunSuite with Matchers with MockitoSugar {
   /* Warn */
 
   test("Marker Logging#warn enabled") {
-    val f = fixture(_.isWarnEnabled, isEnabled = true)
+    val f = fixture(_.isWarnEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.warn(f.marker, f.message)
     verify(f.underlying).warn(f.marker, f.message)
   }
 
   test("Marker Logging#warn not enabled") {
-    val f = fixture(_.isWarnEnabled, isEnabled = false)
+    val f = fixture(_.isWarnEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.warn(f.marker, f.message)
     verify(f.underlying, never).warn(anyObject[Marker], anyString)
   }
 
   test("Marker Logging#warn enabled with message and cause") {
-    val f = fixture(_.isWarnEnabled, isEnabled = true)
+    val f = fixture(_.isWarnEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.warn(f.marker, f.message, f.cause)
     verify(f.underlying).warn(f.marker, f.message, f.cause)
   }
 
   test("Marker Logging#warn not enabled with message and cause") {
-    val f = fixture(_.isWarnEnabled, isEnabled = false)
+    val f = fixture(_.isWarnEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.warn(f.marker, f.message, f.cause)
     verify(f.underlying, never).warn(anyObject[Marker], anyString, anyObject)
   }
 
   test("Marker Logging#warn enabled with parameters") {
-    val f = fixture(_.isWarnEnabled, isEnabled = true)
+    val f = fixture(_.isWarnEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.warnWith(f.marker, f.message, f.arg1)
     verify(f.underlying).warn(f.marker, f.message, Seq(f.arg1): _*)
@@ -206,7 +206,7 @@ class MarkerLoggingTest extends FunSuite with Matchers with MockitoSugar {
   }
 
   test("Marker Logging#warn not enabled with parameters") {
-    val f = fixture(_.isWarnEnabled, isEnabled = false)
+    val f = fixture(_.isWarnEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.warnWith(f.marker, f.message, f.arg1)
     verify(f.underlying, never).warn(f.marker, f.message, Seq(f.arg1): _*)
@@ -219,35 +219,35 @@ class MarkerLoggingTest extends FunSuite with Matchers with MockitoSugar {
   /* Error */
 
   test("Marker Logging#error enabled") {
-    val f = fixture(_.isErrorEnabled, isEnabled = true)
+    val f = fixture(_.isErrorEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.error(f.marker, f.message)
     verify(f.underlying).error(f.marker, f.message)
   }
 
   test("Marker Logging#error not enabled") {
-    val f = fixture(_.isErrorEnabled, isEnabled = false)
+    val f = fixture(_.isErrorEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.error(f.marker, f.message)
     verify(f.underlying, never).error(anyObject[Marker], anyString)
   }
 
   test("Marker Logging#error enabled with message and cause") {
-    val f = fixture(_.isErrorEnabled, isEnabled = true)
+    val f = fixture(_.isErrorEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.error(f.marker, f.message, f.cause)
     verify(f.underlying).error(f.marker, f.message, f.cause)
   }
 
   test("Marker Logging#error not enabled with message and cause") {
-    val f = fixture(_.isErrorEnabled, isEnabled = false)
+    val f = fixture(_.isErrorEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.error(f.marker, f.message, f.cause)
     verify(f.underlying, never).error(anyObject[Marker], anyString, anyObject)
   }
 
   test("Marker Logging#error enabled with parameters") {
-    val f = fixture(_.isErrorEnabled, isEnabled = true)
+    val f = fixture(_.isErrorEnabled(anyObject[Marker]), isEnabled = true)
 
     f.logger.errorWith(f.marker, f.message, f.arg1)
     verify(f.underlying).error(f.marker, f.message, Seq(f.arg1): _*)
@@ -258,7 +258,7 @@ class MarkerLoggingTest extends FunSuite with Matchers with MockitoSugar {
   }
 
   test("Marker Logging#error not enabled with parameters") {
-    val f = fixture(_.isErrorEnabled, isEnabled = false)
+    val f = fixture(_.isErrorEnabled(anyObject[Marker]), isEnabled = false)
 
     f.logger.errorWith(f.marker, f.message, f.arg1)
     verify(f.underlying, never).error(f.marker, f.message, Seq(f.arg1): _*)
@@ -272,13 +272,13 @@ class MarkerLoggingTest extends FunSuite with Matchers with MockitoSugar {
 
   private def fixture(p: slf4j.Logger => Boolean, isEnabled: Boolean) = {
     new {
-      val marker = TestMarker
+      val marker: Marker = TestMarker
       val message = "msg"
       val cause = new RuntimeException("TEST EXCEPTION")
       val arg1 = "arg1"
       val arg2 = new Integer(1)
       val arg3 = "arg3"
-      val underlying = mock[org.slf4j.Logger]
+      val underlying: org.slf4j.Logger = mock[org.slf4j.Logger]
       when(p(underlying)).thenReturn(isEnabled)
       val logger = Logger(underlying)
     }
